# learn2state

./: .gitignore  learn2state.cabal
app/: Main.hs
src/: Learn2State.hs
test/: Learn2StateSpec.hs
