cabal-version:      2.4
name:               learn2state
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Matt Revelle
maintainer:         matthew.revelle@montana.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Learn2State

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        , base                ^>=4.16.4.0
        , hashable            ^>=1.4
        , mtl                 ^>=2.3
        , text                ^>=1.2 && <2.0
        , unordered-containers ^>=0.2.19.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable learn2state
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        learn2state

    hs-source-dirs:   app
    default-language: Haskell2010
